style.css
* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

*::-webkit-scrollbar {
    width: 10px;
}

*::-webkit-scrollbar-track {
    background: #010101;
}

*::-webkit-scrollbar-thumb {
    background-color: #47cf73;
    border-radius: 9px;
    border: 3px double #010101;
}

body{
  background-color: #0f0f0f;
}

.blur {
  filter: blur(3px);
  opacity: .5;
  transform: scale(.98);
}

#logo {
  font-size: 30px;
}

nav {
  position: fixed;
  background-color: transparent;
  backdrop-filter: blur(10px);
  font-size: 20px;
  z-index: 9999;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 2s ease;
  width: 100%;
}

nav ul {
  list-style: none;
  display: flex;
  margin: 0;
}

a {
  color: white;
  text-decoration: none;
  padding: 10px;
  font-weight: bold;
}

.header-imgs {
  position: relative;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

#img-container {
  opacity: 0;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  transition: opacity 1.5s ease 1s;
}

#img-container:first-child{
  opacity: 1;
}

#img-container.slide {
  opacity: 1;
}

.head-img {
  width: 65%;
  height: 50%;
  filter: brightness(60%);
  border-radius: 40px;
  border: 10px double white;
  margin-bottom: 50px;
}


.head-text {
  position: absolute;
  padding: 20px;
  color: orchid;
  background-color: rgba(0, 0, 0, .6);
  font-weight: bold;
  border-radius: 20px;
  border: groove 2px white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
}


/* Styling for the button */ /*
#prog-button {
  margin-top: 10px;
  padding: 10px 20px;
  border: 4px ridge black;
  border-radius: 12px;
  background-color: #4CAF50;
  color: white;
  font-size: 18px;
  cursor: pointer;
} */

#prog-button {
 padding: 17px 40px;
 border-radius: 15px;
 border: 2px solid;
 background-color: #146C94;
 letter-spacing: 1.5px;
 font-size: 15px;
 font-weight: bold;
 transition: all .3s ease;
 box-shadow: #146C94 0px 5px 0px 0px;
}

#prog-button:hover {
 box-shadow: #146C94 0px 2.5px 0px 0px;
}

#prog-button:active {
 background-color: rgb(255, 56, 86);
 /*50, 168, 80*/
 box-shadow: #146C94 0px 0px 0px 0px;
 transform: translateY(0px);
 transition: 200ms;
}

.bot-text {
  color: white;
  position: absolute;
  bottom: 15%;
  left: 47%;
  transform: translate(-50% -50%);
}

section {
  height: 60%;
  width: 100vw;
}

#about {
  color: white;
  padding-top: 20px;
  height: 30vh;
}

#about h2 {
  padding: 10px;
  font-size: 30px;
}

#about p {
  padding-left: 10px;
}

.ctg-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.ctg-container h2, h3 {
  color: white;
}

.card-container {
  position: relative;
  width: 100%;
  height: 30vh;
  display: flex;
  align-items: center;
  padding-top: 10px;
  padding-bottom: 10px;
  overflow-x: auto;
}

.ctg-subtitle {
  position: absolute;
  top: 3%;
  left: 2%;
}

.ctg-card {
  min-width: 100px;
  height: 100px;
  margin: 20px;
  padding: 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  white-space: nowrap;
  font-weight: bold;
  border: 5px double black;
  border-radius: 30px;
  background-color: rgba(255, 255, 255, .3);
  transition: .5s all;
}

.ctg-card i {
  font-size: 60px;
  color: black;
}

.ctg-title {
  color: white;
  font-size: 25px;
  font-weight: bold;
  padding-left: 10px;
  display: flex;
  justify-content: space-between;
  text-align: center;
}

#index-ctg {
  display: inline;
  text-align: center;
}


footer {
  width: 100%;
  text-align: center;
  background-color: #afafaf;
  color: white;
  padding-top: 10px;
  padding-bottom: 10px;
}

